Prepare for public release: sanitize all files
- Move sensitive values to .env file (gitignored)
- Add examples/ folder with templates for public sharing
- Add workflow.json example (sanitized)
- Update listener.py to use environment variables
- Remove production service file from tracking
- Update README with generic documentation
- Update .gitignore for production-only files

--- a/.gitignore
+++ b/.gitignore
@@ -40,11 +40,15 @@ env/
 *.log
 logs/
 
-# Environment files (security critical)
+# Environment files (security critical) - Production only
 .env
 .env.local
 .env.*.local
 *.env
+
+# Production-only files (contain real credentials/paths)
+n8n-auto-heal.service
+# Note: Use examples/n8n-auto-heal.service.template for the public repo
 
 # Credentials and secrets (NEVER commit these)
 *credential*
