Add max fix attempts feature
- Track fix attempts per workflow in .attempts.json
- After MAX_FIX_ATTEMPTS (default 20), skip fix and just notify via email
- Add MAX_FIX_ATTEMPTS env variable support
- Reset attempt counter when workflow is successfully fixed
- Update .env.example with new variable

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -8,6 +8,9 @@ NOTIFICATION_EMAIL=your-email@example.com
 GMAIL_EMAIL=your-email@example.com
 GMAIL_APP_PASSWORD=your-16-char-app-password
 
+# Optional: Max auto-fix attempts before giving up and emailing (default: 20)
+MAX_FIX_ATTEMPTS=20
+
 # Optional: Paths (defaults shown)
 # MCP_CONFIG=/root/n8n-integration/.claude/mcp.json
 # SKILLS_DIR=/root/.skills-global/skills-global
